# s3duct

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: integration.yml  minio.yml  release.yml
.notes/: TODO.md
examples/: zfs-backup.sh
s3duct/: __init__.py  backpressure.py  cli.py  config.py  downloader.py  encryption.py  manifest.py  progress.py  resume.py  thaw.py  throttle.py  uploader.py
s3duct/backends/: base.py  s3.py
tests/: test_backpressure.py  test_cli.py  test_downloader.py  test_encryption.py  test_manifest_compat.py  test_progress.py  test_resume.py  test_thaw.py  test_throttle.py  test_uploader.py
tests/fixtures/compat/v0.4.0/: manifest.json  metadata.json
tests/fixtures/compat/v0.4.0/chunks/: chunk-000000  chunk-000001  chunk-000002
tests/integration/: chaos.sh  roundtrip.sh  run-chaos-docker.sh  run-roundtrip-docker.sh
