[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "s3duct"
version = "0.1.0"
description = "Chunked, resumable, encrypted pipe to S3-compatible object storage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Elastic-2.0"}
dependencies = [
    "boto3>=1.28",
    "click>=8.0",
    "cryptography>=41.0",
]

[project.scripts]
s3duct = "s3duct.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "moto[s3]>=4.0",
    "pytest-asyncio>=0.21",
]
